--- a/book/1_intro/index.html
+++ b/book/1_intro/index.html
@@ -144,7 +144,7 @@
                     <main>
                         <h1 id="intro"><a class="header" href="#intro">Intro</a></h1>
 <p>OpenFOAM® is classified as free and open-source software, hence everyone can contribute, modify and redistribute the software.
-The two main distributions of OpenFOAM® are actively developed:</p>
+The two main distributions of OpenFOAM® actively developed are:</p>
 <ul>
 <li>OpenFOAM from the OpenFOAM Foundation</li>
 <li>OpenFOAM by OpenCFD Ltd</li>
@@ -154,14 +154,16 @@ The two main distributions of OpenFOAM® are actively developed:</p>
 <li>https://www.openfoam.org</li>
 <li>https://www.openfoam.com</li>
 </ul>
-<p>This book will cover OpenFOAM by OpenCFD Ltd which control the verison of the software with the nomenclature:</p>
+<p>This book will cover OpenFOAM by OpenCFD Ltd which does software verison control following the nomenclature:</p>
 <blockquote>
-<p>OpenFOAM-```**`v2112</p>
+<p>OpenFOAM-v2112</p>
 </blockquote>
-<p>Defied by the year followed from the month, i.e. 2021 stands for year while 12 for December, the release occurs 
-every 6 months.</p>
+<p>Which stands for years followed from the month, i.e. 21 stands for year 2021. while 12 for December, hence the software has been released on Dec 21. The release cicle occurs every 6 months.To check the version of OpenFOAM® run</p>
 <pre><code class="language-sh">foamVersion
 </code></pre>
+<p>Once it si installed.</p>
+<h2 id="whats-the-difference-between-the-two-main-distributions-of-openfoam"><a class="header" href="#whats-the-difference-between-the-two-main-distributions-of-openfoam">What`s the difference between the two main distributions of OpenFOAM®?</a></h2>
+<p>OpenFOAM by OpenCFD Ltd contains more utilities and they optimise more the mesh generation fuctionality.</p>
 
                     </main>
 
