--- a/book/2_installation/via_package_manager.html
+++ b/book/2_installation/via_package_manager.html
@@ -142,15 +142,15 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p>To check the dependencies (other software needed to run OpenFoam®) the
+                        <h1 id="installation-via-package-manger"><a class="header" href="#installation-via-package-manger">Installation via package manger</a></h1>
+<p>To check the dependencies (other software needed to run OpenFoam®) the
 suggested software and the description of the package:</p>
 <pre><code class="language-shell-session">apt show openfoam
 </code></pre>
 <p>Then install it</p>
-<pre><code class="language-shell-session">apt install \ *OpenFOAMVersion*
+<pre><code class="language-shell-session">apt install \ *OpenFOAMVersion*\
 </code></pre>
-<p>if the packages are not availble for your distribution, download the precompiled
-binaries instead:</p>
+<p>if the packages are not availble for your distribution, download the precompiled binaries instead:</p>
 <pre><code class="language-console">wget https://dl.openfoam.com/source/v2206/OpenFOAM-v2206.tgz
 wget https://dl.openfoam.com/source/v2206/ThirdParty-v2206.tgz
 </code></pre>
