--- a/book/2_installation/index.html
+++ b/book/2_installation/index.html
@@ -143,7 +143,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
-<p>The installation of OpenFoam® is possible through three methods:</p>
+<p>The installation of OpenFoam® is possible through three differetn methods:</p>
 <ul>
 <li>
 <p>Directly installing the binaries from a packages manager (not all Linux distribution can take advantage of this method)</p>
@@ -155,6 +155,11 @@
 <p>Compiling from the source code</p>
 </li>
 </ul>
+<h2 id="suggested-location-in-the-linux-file-system"><a class="header" href="#suggested-location-in-the-linux-file-system">Suggested location in the linux file system</a></h2>
+<p>Only if you do not use a package manger you have to choose where to install the software, it is suggested to install it on the directory</p>
+<pre><code class="language-sh">sudo mkdir -p /opt/OpenFOAM
+</code></pre>
+<p>Where <code>/opt</code>stands for optional software on the Linux file system</p>
 
                     </main>
 
