--- a/book/7_Directories’_structure/constant/transportproperties.html
+++ b/book/7_Directories’_structure/constant/transportproperties.html
@@ -145,6 +145,9 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="transportproperties"><a class="header" href="#transportproperties">transportProperties</a></h1>
+<p>nu is the kinematic viscosity i.e.</p>
+<p>$ ν_{\text{air}} = \frac{µ}{\rho} = 1.48 \times 10^{- 5}\ \frac{m^{2}}{s}\ $</p>
+<p>Air kinematic viscosity at given temperature</p>
 
                     </main>
 
