--- a/book/preface.html
+++ b/book/preface.html
@@ -166,7 +166,22 @@ resolve the setting of a problem in the shortest possible time.</p>
 ├── OpenFOAM-v2206
 └── ThirdParty-v2206
 </code></pre>
-
+<!--  Script to show the footer   -->
+<html>
+<script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous">
+</script>
+<script>
+$(function(){
+  $("#footer").load("./footer.html");
+});
+</script>
+<body>
+<div id="footer"></div>
+</body>
+</html>
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
