--- a/book/7_Directories’_structure/0/ε-ω-k/index.html
+++ b/book/7_Directories’_structure/0/ε-ω-k/index.html
@@ -159,6 +159,13 @@ velocity and molecular viscosity to determine k, ε and ω using the
 following technique. To start the calculation, the Turbulent Intensity
 I, and Viscosity Ratio β need to be approximated by using the table
 below.</p>
+<div class="table-wrapper"><table><thead><tr><th>Turbulence</th><th>Reynolds number</th><th>Turbulent Intensity</th></tr></thead><tbody>
+<tr><td>Low turbulence</td><td>3000 &lt; Re &lt; 5000</td><td>1%</td></tr>
+<tr><td>Med turbulence</td><td>5000 &lt; Re &lt; 15000</td><td>1-5%</td></tr>
+<tr><td>High turbulence</td><td>15000 &lt; Re &lt; 20000</td><td>5-20%</td></tr>
+<tr><td>High turbulence</td><td>Re &gt; 100000</td><td>5-20%</td></tr>
+</tbody></table>
+</div>
 <p>To calculate k, the following equation can be used:</p>
 <p>\[ k = \frac{3}{2}\left( \text{UI} \right)^{2} \]</p>
 <p>\[ ε = C_{\mu}\frac{\text{ρk}^{2}}{\mu}β ^{- 1}\ \]</p>
