--- a/book/7_Directories’_structure/index.html
+++ b/book/7_Directories’_structure/index.html
@@ -167,6 +167,7 @@
     ├── snappyHexMeshDict                   → Dictionary for mesh generation (with snappyHexMesh)
     └── surfaceFeatureExtractDict           → Dictionary de facto needed for mesh generation (with snappyHexMesh)
 </code></pre>
+<p>You can change the parameters in the dictionaries controlDict, fvSchemes and fvSolution on-the-fly. But you will need to set the keyword runTimeModifiable to yes in the controlDict dictionary.</p>
 
                     </main>
 
