--- a/book/7_Directories’_structure/system/fvSchemes/index.html
+++ b/book/7_Directories’_structure/system/fvSchemes/index.html
@@ -146,7 +146,9 @@
                     <main>
                         <h1 id="fvschemes"><a class="header" href="#fvschemes">fvSchemes</a></h1>
 <p>This dictionary contains the instructions to discretize the problem’s
-equations. Different discretization procedures suit different mesh
+equations. 
+But you will need to set the keyword runTimeModifiable to yes in the controlDict dictionary.
+Different discretization procedures suit different mesh
 refinement and quality.</p>
 <div class="table-wrapper"><table><thead><tr><th>Main document keywords</th><th>Category of mathematical terms</th></tr></thead><tbody>
 <tr><td>interpolationSchemes</td><td>Point-to-point interpolations of values</td></tr>
@@ -154,7 +156,7 @@ refinement and quality.</p>
 <tr><td>gradSchemes</td><td>Gradient          ∇</td></tr>
 <tr><td>divSchemes</td><td>Divergence      ∇ ∙</td></tr>
 <tr><td>laplacianSchemes</td><td>Laplacian    ∇<sup>2</td></tr>
-<tr><td>timeScheme</td><td>First and second time derivatives ![∂∕ ∂t,∂2∕∂<sup>2<sup>t ]</td></tr>
+<tr><td>timeScheme</td><td>First and second time derivatives ![∂∕ ∂t,∂2∕∂<sup>2</sup>t]</td></tr>
 </tbody></table>
 </div>
 <h3 id="gradscheme"><a class="header" href="#gradscheme">gradScheme</a></h3>
