modified:   src/footers/footer_second_level_depth.html 	modified:   src/insert_footer_in_each_md_file.sh

--- a/src/footers/footer_second_level_depth.html
+++ b/src/footers/footer_second_level_depth.html
@@ -10,7 +10,7 @@
     <div class="footer-left">
     <p class="footer-links">
 
-      <img class="image" src="../images/logoWithWords_noBackGround_white.svg" alt=”AdigeLogo” href="https://www.adigecalculations.com/" ></img>
+      <img class="image" src="../../images/logoWithWords_noBackGround_white.svg" alt=”AdigeLogo” href="https://www.adigecalculations.com/" ></img>
       <style> .image {
       /* position:fixed; */
       width: 30%;
