--- a/src/footers/footer_second_level_depth.html
+++ b/src/footers/footer_second_level_depth.html
@@ -39,7 +39,7 @@
         box-sizing: border-box;
         width: 100%;
         padding: 43px 50px 25px;
-        max-width: 750px; 
+        max-height: 165px; 
 
       }
       .footer-left p {
@@ -69,12 +69,11 @@
       .footer-right {
         float: right;
         margin-top: -29px;
-        /* max-height: 50px; */
       }
       .footer-right a {
         display: table;
-        width: 90px;
-        height: 20px;
+        width: 100px;
+        height: 18px;
         padding: 1px;
         margin: 3px;
         background-color: #424749;
@@ -97,56 +96,56 @@
       }
 
       .glow-on-hover {
-    width: 220px;
-    height: 50px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    border-radius: 10px;
-}
+        width: 220px;
+        height: 50px;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        position: relative;
+        z-index: 0;
+        border-radius: 10px;
+    }
 
-.glow-on-hover:before {
-    content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff0000);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}
+    .glow-on-hover:before {
+        content: '';
+        background: linear-gradient(45deg, #d9c7c7, #2e2e2b, #919fde, #888987, #252f2d, #8b90aa, #fafafa, #262525);
+        position: absolute;
+        top: -2px;
+        left:-2px;
+        background-size: 400%;
+        z-index: -1;
+        filter: blur(5px);
+        width: calc(100% + 4px);
+        height: calc(100% + 4px);
+        animation: glowing 20s linear infinite;
+        opacity: 0;
+        transition: opacity .3s ease-in-out;
+        border-radius: 10px;
+    }
 
-.glow-on-hover:active {
-    color: #000
-}
+    .glow-on-hover:active {
+        color: #000
+    }
 
-.glow-on-hover:active:after {
-    background: transparent;
-}
+    .glow-on-hover:active:after {
+        background: transparent;
+    }
 
-.glow-on-hover:hover:before {
-    opacity: 1;
-}
+    .glow-on-hover:hover:before {
+        opacity: 1;
+    }
 
-.glow-on-hover:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgb(65, 66, 68);
-    left: 0;
-    top: 0;
-    border-radius: 10px;
-}
+    .glow-on-hover:after {
+        z-index: -1;
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgb(65, 66, 68);
+        left: 0;
+        top: 0;
+        border-radius: 10px;
+    }
 
 @keyframes glowing {
     0% { background-position: 0 0; }
